--- a/Data_pipeline.Rmd
+++ b/Data_pipeline.Rmd
@@ -94,6 +94,13 @@ creating the data frame
 # create the data frame/tibble with ids and sliced transcripts
 speechdf <- tibble(ID = ids, Level = levels, Transcript = removedlines)
 
+speechdf
+speechdf %>% 
+  count(Level)
+
+speechdf %>% 
+  filter(Level == "low-int") %>% 
+  count(ID, Level)
 ```
 
 
@@ -267,24 +274,34 @@ Low-intermediate
 LI_correct <- low_int$annotTXT %>% 
   str_unique() %>% 
   str_remove_all("\\b../NN") %>% 
+  str_remove_all("a/DT\\screating/NN\\s|a/DT\\smam/NN\\s|a/DT\\sfewer/JJR\\sgarage/NN\\s|a/DT\\sthe/DT\\stopic/NN\\s|a/DT\\sfewer/JJR\\sparking/NN\\s") %>% 
   str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NN\\s") %>% 
   unlist()
+str_unique(LI_correct)
 
 
-
-# I still need to find a list for common mass nouns because it is incorrect to a/an with mass nouns also, but the tagger does not tag them
-LI_incorrect <- low_int$annotTXT %>% 
+# Instance of incorrect use with plural nouns
+LI_incorrectPL <- low_int$annotTXT %>% 
   str_unique() %>% 
   str_remove_all("\\b../NN") %>% 
-  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/(NNS|NNC)") %>% 
+  str_remove_all("a/DT\\sfew/JJ\\sbuses/NNS") %>% 
+  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NNS") %>% 
   unlist()
+str_unique(LI_incorrectPL)
 
+# instances of incorrect use with mass nouns
+LI_incorrectMS <- low_int$annotTXT %>% 
+  str_unique() %>% 
+  str_remove_all("\\b../NN") %>% 
+  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NNC") %>% 
+  unlist()
+str_unique(LI_incorrectMS)
 
 
 # I created a pattern to exclude so that I can focus on cases where indefinite articles were not used. 
 
 pattern <- "\\w+/(DT|CD)\\s(\\w+/\\w+\\s)?(\\w+|someone|something|somewhere|everything|everyone)/NN\\s"
-patt <- "\\w+/VB.\\s(\\w+/\\w+\\s)?(someone|something|somewhere|everything|everyone|anyone|anybody|anthing)/NN\\s"
+patt <- "\\w+/VB.\\s(\\w+/\\w+\\s)?(someone|something|somewhere|everything|everyone|anyone|anybody|anything|nothing|pollution|experience|oil|bread|pasta|hair|football|soccer|worhis|cheese|english|forget|shopping|Weam|childhood)/NN\\s"
 
 # pulls out instances where a/an should have been used.
 LI_null <- low_int$annotTXT %>%
@@ -294,8 +311,17 @@ LI_null <- low_int$annotTXT %>%
   str_split(pattern) %>%
   str_split(patt) %>% 
   str_remove_all("um/NN") %>%
+  str_remove_all(nofit) %>% 
   str_extract_all("\\w+/\\w+\\s\\w+/VB.\\s(\\w+/\\w+\\s)?\\w+/NN\\s") %>% 
   unlist()
+str_unique(LI_null)  
+  str_subset("are/VBP")
+  
+# These are all the contexts that don't fit the requirement  
+nofit <-  str_c("worhe/PRP has/VBZ requality/NN ", "he/PRP took/VBD care/NN ",  "always/RB playing/VBG barbie/NN ", "I/PRP woke/VBD up/RP morning/NN ", "he/PRP is/VBZ best/JJS friend/NN ", "and/CC hes/VBZ stole/NN ", "he/PRP had/VBD many/JJ problem/NN ",  "there/EX are/VBP different/JJ way/NN ", "cheese/NN has/VBZ different/JJ kind/NN ",  "they/PRP want/VBP creat/NN ", "he/PRP had/VBD he/PRP assist/NN ", "I/PRP woke/VBD up/RP saturday/NN ",  "in/IN was/VBD tra/NN ",   "we/PRP had/VBD dinner/NN ", "he/PRP lives/VBZ in/IN sultana/NN ", "you/PRP are/VBP you/PRP name/NN ",   "guys/NNS was/VBD best/JJS friend/NN ", "I/PRP miss/VBP him/PRP morcoord/NN ", "I/PRP was/VBD walk/NN ", "mother/NN\\stook/VBD\\scare/NN", "there/EX\\sare/VBP\\sfewer/JJR\\sfewer/NN", "he/PRP\\sdid/VBD\\smany/JJ\\sthing/NN", "he/PRP\\sread/VBD\\smore/JJR\\sstory/NN", "we/PRP\\swe/VBD\\sin/IN\\sfact/NN", "friend/NN\\sis/VBZ\\sname/NN", "I/PRP\\swant/VBP\\stalk/NN", sep = "|") %>% 
+  str_replace_all(" ", "\\\\s")
+no
+
 ```
 
 
@@ -307,32 +333,50 @@ HI_correct <- high_int$annotTXT %>%
   str_unique() %>% 
   str_remove_all("\\b../NN\\s") %>% 
   str_remove_all("\\b./NN\\s") %>% 
+  str_remove_all("pollution|a/DT\\smany/JJ\\sfuture/NN|a/DT\\smissing/NN|a/DT\\sskin/NN\\scancer/NN|a/DT\\slil/NN|a/DT\\sArab/JJ\\sGulf/NN|a/DT\\sgood/JJ\\sethics/NN|a/DT\\stha/NN|an/DT\\sd/JJ\\smoreover/NN|a/DT\\swalking/NN|a/DT\\smoney/NN") %>% 
+  str_remove_all("\\bPAR/NN|\\bPAR0/NN|\\bPAR0") %>% 
   str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NN\\s") %>% 
   unlist()
+  
+str_unique(HI_correct)
 
-
-
-HI_incorrect<- high_int$annotTXT %>% 
+# instances of incorrect use of plural nouns
+HI_incorrectPL<- high_int$annotTXT %>% 
   str_unique() %>% 
   str_remove_all("\\b../NN\\s") %>% 
   str_remove_all("\\b./NN\\s") %>% 
-  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/(NNS|NNC)") %>% 
+  str_remove_all("a/DT\\scouple/NN\\syears/NNS") %>% 
+  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NNS") %>% 
   unlist()
+HI_incorrectPL
 
+# instances of incorrect use of mass nouns
+HI_incorrectMS <- high_int$annotTXT %>% 
+  str_unique() %>% 
+  str_remove_all("\\b../NN\\s") %>% 
+  str_remove_all("\\b./NN\\s") %>%
+  str_remove_all("a/DT\\swhole/JJ\\ssheep/NNC") %>%
+  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NNC") %>% 
+  unlist()
+str_unique(HI_incorrectMS)
 
 
 pattern <- "\\w+/(DT|CD)\\s(\\w+/\\w+\\s)?\\w+/NN\\s"
-patt <- "\\w+/VB.\\s(\\w+/\\w+\\s)?(someone|something|somewhere|everything|everyone|anyone|anybody)/NN\\s"
+patt <- "\\w+/VB.\\s(\\w+/\\w+\\s)?(someone|something|somewhere|everything|everyone|anyone|anybody|anything|nothing|pollution|experience|oil|bread|pasta|hair|football|soccer|worhis|cheese|english|forget|shopping|Weam|childhood)/NN\\s"
 
 HI_null <- high_int$annotTXT %>%
   str_unique() %>% 
   str_split(pattern) %>%
   str_split(patt) %>% 
+  str_split("are/VBP|something/NN\\s") %>% 
   str_remove_all("\\b../NN\\s") %>% 
   str_remove_all("\\b./NN\\s") %>% 
-  str_remove_all("\\bPAR/NN|\\bPAR0/NN|\\bPAR0") %>% 
+  str_remove_all("\\bPAR/NN|\\bPAR0/NN|\\bPAR0") 
   str_extract_all("\\w+/VB.\\s(\\w+/\\w+\\s){0,2}\\w+/NN\\s") %>% 
   unlist()
+str_unique(HI_null)
+  str_subset("many/")
+head(HI_null, 12)
 ```
 
 Low-advanced
@@ -341,28 +385,42 @@ LA_correct <- low_adv$annotTXT %>%
   str_unique() %>% 
   str_remove_all("\\b../NN\\s") %>% 
   str_remove_all("\\b./NN\\s") %>% 
+  str_remove_all("a/DT\\senter/NN|a/DT\\skra/NN|a/DT\\smoney/NN|a/DT\\scensorshi/NN\\scen/NN") %>% 
   str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NN\\s") %>% 
   unlist()
+str_unique(LA_correct)
 
-
-
-LA_incorrect <- low_adv$annotTXT %>% 
+# instances of incorrect use with plural nouns
+LA_incorrectPL <- low_adv$annotTXT %>% 
   str_unique() %>% 
   str_remove_all("\\b../NN\\s") %>% 
   str_remove_all("\\b./NN\\s") %>% 
-  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/(NNS|NNC)") %>% 
+  str_remove_all("a/DT\\sfew/JJ\\sscenes/NNS|a/DT\\sfew/JJ\\smovies/NNS") %>%
+  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NNS") %>% 
   unlist()
+LA_incorrectPL
 
-  
+# instances of incorrect use with mass nouns
+LA_incorrectMS <- low_adv$annotTXT %>% 
+  str_unique() %>% 
+  str_remove_all("\\b../NN\\s") %>% 
+  str_remove_all("\\b./NN\\s") %>%
+  str_extract_all("(a|an)/DT\\s(\\w+/\\w+\\s)?\\w+/NNC") %>% 
+  unlist()
+LA_incorrectMS
+
 
 LA_null <- low_adv$annotTXT %>% 
   str_unique() %>% 
   str_split(pattern) %>%
   str_split(patt) %>% 
+  str_split("are/VBP") %>% 
   str_remove_all("\\b../NN\\s") %>% 
   str_remove_all("\\b./NN\\s") %>% 
   str_extract_all("\\w+/VB.\\s(\\w+/\\w+\\s){0,2}\\w+/NN\\s") %>% 
   unlist()
+str_unique(LA_null) 
+  str_subset("are/VBP")
 ```
 
 
@@ -377,11 +435,17 @@ rename("LI_correct" = "value") %>%
   mutate(status = "low-int_correct", .after = LI_correct)
 lowint_corr
 
-
-lowint_incorr <- str_unique(LI_incorrect) %>%
+# incoorect with plurals
+lowint_incorrPL <- str_unique(LI_incorrectPL) %>%
   as_tibble() %>% 
-rename("LI_incorrect" = "value") %>% 
-  mutate(status = "low-int_incorrect", .after = LI_incorrect)
+rename("LI_incorrectPL" = "value") %>% 
+  mutate(status = "low-int_incorrect-PL", .after = LI_incorrectPL)
+
+# incorrect with mass
+lowint_incorrMS <- str_unique(LI_incorrectMS) %>%
+  as_tibble() %>% 
+rename("LI_incorrectMS" = "value") %>% 
+  mutate(status = "low-int_incorrect-MS", .after = LI_incorrectMS)
 
 
 
@@ -402,11 +466,17 @@ rename("HI_correct" = "value") %>%
   mutate(status = "high-int_correct", .after = HI_correct) 
 highint_corr 
 
-highint_incorr <- str_unique(HI_incorrect) %>%
+#incorrect with plurals
+highint_incorrPL <- str_unique(HI_incorrectPL) %>%
   as_tibble() %>% 
-rename("HI_incorrect" = "value") %>% 
-  mutate(status = "high-int_incorrect", .after = HI_incorrect)
+rename("HI_incorrectPL" = "value") %>% 
+  mutate(status = "high-int_incorrect-PL", .after = HI_incorrectPL)
 
+# incorrect with mass
+highint_incorrMS <- str_unique(HI_incorrectMS) %>%
+  as_tibble() %>% 
+rename("HI_incorrectMS" = "value") %>% 
+  mutate(status = "high-int_incorrect-MS", .after = HI_incorrectMS)
 
 highint_null <- str_unique(HI_null) %>% 
   as_tibble() %>% 
@@ -426,10 +496,17 @@ rename("LA_correct" = "value") %>%
 
 
 ```{r}
-lowad_incorr <- str_unique(LA_incorrect) %>%
+# incorrect with plurals
+lowad_incorrPL <- str_unique(LA_incorrectPL) %>%
   as_tibble() %>% 
-rename("LA_incorrect" = "value") %>% 
-  mutate(status = "low-adv_incorrect", .after = LA_incorrect)
+rename("LA_incorrectPL" = "value") %>% 
+  mutate(status = "low-adv_incorrectPL", .after = LA_incorrectPL)
+
+# incorrect with mass
+lowad_incorrMS <- str_unique(LA_incorrectMS) %>%
+  as_tibble() %>% 
+rename("LA_incorrectMS" = "value") %>% 
+  mutate(status = "low-adv_incorrectMS", .after = LA_incorrectMS)
 ```
 
 
@@ -444,9 +521,9 @@ rename("LA_null" = "value") %>%
 
 Creating the variables from the tibbles created above to get the "final" form of the data from which the analysis can be done.
 ```{r}
-Status <- c(lowint_corr$status, lowint_incorr$status, lowint_null$status, highint_corr$status, highint_incorr$status, highint_null$status, lowad_corr$status, lowad_incorr$status, lowad_null$status)
+Status <- c(lowint_corr$status, lowint_incorrPL$status, lowint_incorrMS$status, lowint_null$status, highint_corr$status, highint_incorrPL$status, highint_incorrMS$status, highint_null$status, lowad_corr$status, lowad_incorrPL$status, lowad_incorrMS$status, lowad_null$status)
 
-Article_contexts <- c(lowint_corr$LI_correct, lowint_incorr$LI_incorrect, lowint_null$LI_null, highint_corr$HI_correct, highint_incorr$HI_incorrect,  highint_null$HI_null, lowad_corr$LA_correct, lowad_incorr$LA_incorrect,  lowad_null$LA_null)
+Article_contexts <- c(lowint_corr$LI_correct, lowint_incorrPL$LI_incorrectPL, lowint_incorrMS$LI_incorrectMS, lowint_null$LI_null, highint_corr$HI_correct, highint_incorrPL$HI_incorrectPL, highint_incorrMS$HI_incorrectMS, highint_null$HI_null, lowad_corr$LA_correct, lowad_incorrPL$LA_incorrectPL, lowad_incorrMS$LA_incorrectMS,  lowad_null$LA_null)
 
 articles <- tibble(Article_contexts, Status)
 
@@ -454,10 +531,10 @@ articles <- tibble(Article_contexts, Status)
 articles <- articles %>% 
   separate(Status, into = c("Level", "Use"), sep = "_")
 
-
+articles
 #This is the final form of the data. For any new changes I make I'll run this again to overwrite the old version
 saveRDS(articles, "data/articles_final.csv")
-
+articles <- readRDS("data/articles_final.csv")
 
 ```
 
@@ -467,6 +544,11 @@ For this project the main goal is to see how many times the participants used ar
 ```{r}
 articles %>% 
   count(Level, Use)
-```
+articles
+  ggplot(aes(as.factor(Use)))+
+  geom_bar()
 
+articles %>% 
+```
+maybe consider adding participant ids, and don't forget to split incorrect into PL and MS
 
