--- a/Data_pipeline.Rmd
+++ b/Data_pipeline.Rmd
@@ -68,6 +68,8 @@ Before I create the data frame, I need to remove the first few lines of metadata
 ```{r}
 # read the lines 
 lines <- map(speech, read_lines)
+head(lines)
+str_length(lines)
 
 # put the maximum number of lines in an object
 max <- map_int(lines, length) %>% max()
@@ -81,9 +83,22 @@ tibblelines <- as_tibble(evenlines, .name_repair = "unique")
 # this removes the first few lines. For some reason slice_tail selects from the start not the end, and slice_head selects from the end.
 removedlines <- slice_tail(tibblelines, n = -9)
 
-# save the sliced transcripts as a list in an object to put them in a tibble with ids and levels later.
-removedlines <- as.list(removedlines) 
 
+# save the sliced transcripts as a list in an object to put them in a tibble with ids and levels later.
+removedlines <- as.list(removedlines)
+
+head(removedlines)
+```
+
+
+```{r}
+clean <- removedlines %>% 
+   str_remove_all("\\bNA\\b|\\d+_\\d+|\\*\\d+|\\d{3}|@...|\\\\t|\\\n|c\\(|[^\\w|\\s]|\\buh\\s|\\bah\\s|\\bPAR|\\bPAR0") %>% 
+  str_replace_all("_", " ")
+
+g <- as.list(clean)
+
+head(clean)
 ```
 
 
@@ -92,17 +107,20 @@ creating the data frame
 
 ```{r}
 # create the data frame/tibble with ids and sliced transcripts
-speechdf <- tibble(ID = ids, Level = levels, Transcript = removedlines)
+speechdf <- tibble(ID = ids, Level = levels, Transcript = clean)
 
 speechdf
 speechdf %>% 
-  filter(Level == "high-int")  %>% 
+  filter(Level == "low-adv")  %>% 
   distinct(ID) 
-  count(ID)
 
 speechdf %>% 
   count(Level) %>% 
   rename(Contributions = "n")
+
+speechd <- speechdf %>% 
+  select(-Transcript)
+speechd
 ```
 
 
@@ -127,14 +145,14 @@ head(speechdf$Transcript)
 I am going to create 3 data frames to analyze the article use for each level
 
 ```{r}
-lowint <- speechdf %>% 
-  filter(Level == "low-int")
+ lowint <- speechdf %>%
+   filter(Level == "low-int")
+ lowint
+ highint <- speechdf %>%
+   filter(Level == "high-int")
 
-highint <- speechdf %>% 
-  filter(Level == "high-int")
-
-lowadv <- speechdf %>% 
-  filter(Level == "low-adv")
+ lowadv <- speechdf %>%
+   filter(Level == "low-adv")
 
 ```
 
@@ -156,23 +174,33 @@ model <- udpipe_load_model(file = ("english-ewt-ud-2.5-191206.udpipe"))
 
 
 
-<!-- instead of creating three different df create a column with the tagged dfs -->
-<!-- ```{r} -->
-<!-- ANNOTspeech <- speechdf %>% -->
-<!--   mutate(annoTXT = map(Transcript, ~ udpipe_annotate(model, .x) %>% as_tibble)) -->
+instead of creating three different df create a column with the tagged dfs
+```{r}
+ANNOTspeech <- speechdf %>%
+  mutate(annoTXT = map(Transcript, ~ udpipe_annotate(model, .x) %>% as_tibble))
 
-<!-- low_int <-  low_int %>% mutate(annotTXT = paste(low_int$token, "/", low_int$xpos, collapse = " ", sep = ""))  -->
-
-
-<!-- # saved the file so I don't have to run udpipe_annotate() every time -->
-<!-- saveRDS(ANNOTspeech, "articles-analysis.csv") -->
+low_int <-  low_int %>% mutate(annotTXT = paste(low_int$token, "/", low_int$xpos, collapse = " ", sep = ""))
 
 
-<!-- ANNOTspeech <- readRDS("articles-analysis.csv") -->
+# saved the file so I don't have to run udpipe_annotate() every time
+saveRDS(ANNOTspeech, "articles-analysis.csv")
 
-<!-- head(ANNOTspeech$annoTXT, 1) -->
 
-<!-- ``` -->
+ANNOTspeech <- readRDS("Private/articles-analysis.csv")
+
+head(ANNOTspeech$annoTXT, 1)
+ANNOTspeech$annoTXT %>% 
+  map_int(nrow) %>% 
+  sum()
+ANNOTspeech <- ANNOTspeech %>% 
+  unnest(annoTXT) %>% 
+  select(ID, Level, Transcript, token, xpos)
+
+head(ANNOTspeech)
+
+ANNOTspeech <- ANNOTspeech %>%  mutate(annotTXT = paste(ANNOTspeech$token, "/", ANNOTspeech$xpos, collapse = " ", sep = "")) %>% 
+  select(-token, -xpos)
+```
 
 
 
@@ -180,9 +208,24 @@ model <- udpipe_load_model(file = ("english-ewt-ud-2.5-191206.udpipe"))
 POS tagging the data frames.
 
 ```{r}
-# low_int <- udpipe_annotate(model, x = lowint$Transcript) %>% 
-#   as_tibble()
+low_int <- udpipe_annotate(model, x = lowint$Transcript) %>%
+as_tibble() 
+
+testt <- low_int %>% 
+  selc
+
+head(low_int)
 ```
+
+```{r}
+lowint %>% 
+  head() %>% 
+  mutate()
+  pull(Transcript) %>% 
+  udpipe_annotate(model, x = .) %>% 
+  as_tibble()
+```
+
 
 ```{r}
 # high_int <- udpipe_annotate(model, x = highint$Transcript) %>% 
@@ -228,16 +271,18 @@ Now, I will annotate the texts with POS tags so I can analyze the contexts, in a
 
 ```{r}
 #I'll annotate the texts with pos
-# low_int <-  low_int %>% mutate(annotTXT = paste(low_int$token, "/", low_int$xpos, collapse = " ", sep = "")) 
-
+low_int <-  low_int %>% mutate(annotTXT = paste(low_int$token, "/", low_int$xpos, collapse = " ", sep = ""))
+low_int <-  low_int %>% paste(low_int$token, "/", low_int$xpos, collapse = " ", sep = "")
 # this pattern was created to replace /NN with /NNC for mass nouns  
 patternn <- paste0("\\b(", paste(sub("/NNC", "", commonNN), collapse = "|"), ")\\b/NN")
 
 # Replace /NN with /NNC to tag mass nouns
 # low_int$annotTXT <- str_replace_all(low_int$annotTXT, patternn, "\\1/NNC")
 
-
+str_length(low_int)
 ```
+
+
 
 ```{r}
 # high_int <-  high_int %>% mutate(annotTXT = paste(high_int$token, "/", high_int$xpos, collapse = " ", sep = ""))
@@ -306,6 +351,12 @@ str_unique(LI_incorrectMS)
 pattern <- "\\w+/(DT|CD)\\s(\\w+/\\w+\\s)?(\\w+|someone|something|somewhere|everything|everyone)/NN\\s"
 patt <- "\\w+/VB.\\s(\\w+/\\w+\\s)?(someone|something|somewhere|everything|everyone|anyone|anybody|anything|nothing|pollution|experience|oil|bread|pasta|hair|football|soccer|worhis|cheese|english|forget|shopping|Weam|childhood)/NN\\s"
 
+
+# These are all the contexts that don't fit the requirement  
+nofit <-  str_c("worhe/PRP has/VBZ requality/NN ", "he/PRP took/VBD care/NN ",  "always/RB playing/VBG barbie/NN ", "I/PRP woke/VBD up/RP morning/NN ", "he/PRP is/VBZ best/JJS friend/NN ", "and/CC hes/VBZ stole/NN ", "he/PRP had/VBD many/JJ problem/NN ",  "there/EX are/VBP different/JJ way/NN ", "cheese/NN has/VBZ different/JJ kind/NN ",  "they/PRP want/VBP creat/NN ", "he/PRP had/VBD he/PRP assist/NN ", "I/PRP woke/VBD up/RP saturday/NN ",  "in/IN was/VBD tra/NN ",   "we/PRP had/VBD dinner/NN ", "he/PRP lives/VBZ in/IN sultana/NN ", "you/PRP are/VBP you/PRP name/NN ",   "guys/NNS was/VBD best/JJS friend/NN ", "I/PRP miss/VBP him/PRP morcoord/NN ", "I/PRP was/VBD walk/NN ", "mother/NN\\stook/VBD\\scare/NN", "there/EX\\sare/VBP\\sfewer/JJR\\sfewer/NN", "he/PRP\\sdid/VBD\\smany/JJ\\sthing/NN", "he/PRP\\sread/VBD\\smore/JJR\\sstory/NN", "we/PRP\\swe/VBD\\sin/IN\\sfact/NN", "friend/NN\\sis/VBZ\\sname/NN", "I/PRP\\swant/VBP\\stalk/NN", sep = "|") %>% 
+  str_replace_all(" ", "\\\\s")
+
+
 # pulls out instances where a/an should have been used.
 LI_null <- low_int$annotTXT %>%
   str_unique() %>% 
@@ -320,10 +371,6 @@ LI_null <- low_int$annotTXT %>%
 str_unique(LI_null)  
   str_subset("are/VBP")
   
-# These are all the contexts that don't fit the requirement  
-nofit <-  str_c("worhe/PRP has/VBZ requality/NN ", "he/PRP took/VBD care/NN ",  "always/RB playing/VBG barbie/NN ", "I/PRP woke/VBD up/RP morning/NN ", "he/PRP is/VBZ best/JJS friend/NN ", "and/CC hes/VBZ stole/NN ", "he/PRP had/VBD many/JJ problem/NN ",  "there/EX are/VBP different/JJ way/NN ", "cheese/NN has/VBZ different/JJ kind/NN ",  "they/PRP want/VBP creat/NN ", "he/PRP had/VBD he/PRP assist/NN ", "I/PRP woke/VBD up/RP saturday/NN ",  "in/IN was/VBD tra/NN ",   "we/PRP had/VBD dinner/NN ", "he/PRP lives/VBZ in/IN sultana/NN ", "you/PRP are/VBP you/PRP name/NN ",   "guys/NNS was/VBD best/JJS friend/NN ", "I/PRP miss/VBP him/PRP morcoord/NN ", "I/PRP was/VBD walk/NN ", "mother/NN\\stook/VBD\\scare/NN", "there/EX\\sare/VBP\\sfewer/JJR\\sfewer/NN", "he/PRP\\sdid/VBD\\smany/JJ\\sthing/NN", "he/PRP\\sread/VBD\\smore/JJR\\sstory/NN", "we/PRP\\swe/VBD\\sin/IN\\sfact/NN", "friend/NN\\sis/VBZ\\sname/NN", "I/PRP\\swant/VBP\\stalk/NN", sep = "|") %>% 
-  str_replace_all(" ", "\\\\s")
-no
 
 ```
 
@@ -473,7 +520,7 @@ rename("LI_incorrectMS" = "value") %>%
 lowint_null <- str_unique(LI_null) %>% 
   as_tibble() %>% 
 rename("LI_null" = "value") %>% 
-  mutate(status = "low-int_null", .after = LI_null)
+  mutate(status = "low-int_incorrect-null", .after = LI_null)
 lowint_null
 ```
 
@@ -502,7 +549,7 @@ rename("HI_incorrectMS" = "value") %>%
 highint_null <- str_unique(HI_null) %>% 
   as_tibble() %>% 
 rename("HI_null" = "value") %>% 
-  mutate(status = "high-int_null", .after = HI_null)
+  mutate(status = "high-int_incorrect-null", .after = HI_null)
 
 ```
 
@@ -535,7 +582,7 @@ rename("LA_incorrectMS" = "value") %>%
 lowad_null <- str_unique(LA_null) %>% 
   as_tibble() %>% 
 rename("LA_null" = "value") %>% 
-  mutate(status = "low-adv_null", .after = LA_null)
+  mutate(status = "low-adv_incorrect-null", .after = LA_null)
 ```
 
 
@@ -546,8 +593,8 @@ Status <- c(lowint_corr$status, lowint_incorrPL$status, lowint_incorrMS$status, 
 
 Article_contexts <- c(lowint_corr$LI_correct, lowint_incorrPL$LI_incorrectPL, lowint_incorrMS$LI_incorrectMS, lowint_null$LI_null, highint_corr$HI_correct, highint_incorrPL$HI_incorrectPL, highint_incorrMS$HI_incorrectMS, highint_null$HI_null, lowad_corr$LA_correct, lowad_incorrPL$LA_incorrectPL, lowad_incorrMS$LA_incorrectMS,  lowad_null$LA_null)
 
-articles <- tibble(Article_contexts, Status)
-
+articles <- tibble(ids, Article_contexts, Status)
+ids
 # separating level and correctness of use into two columns
 articles <- articles %>% 
   separate(Status, into = c("Level", "Use"), sep = "_")
@@ -557,6 +604,8 @@ view(articles)
 saveRDS(articles, "data/articles_final.csv")
 articles <- readRDS("data/articles_final.csv")
 
+
+
 #write_csv(articles, "Private/articles_final2.csv")
 ```
 
@@ -564,20 +613,25 @@ articles <- readRDS("data/articles_final.csv")
 For this project the main goal is to see how many times the participants used articles, correctly or incorrectly, vs omitted them from obligatory contexts. To this end, a count of instances will be used. Some more work needs to be done to ensure all the examples included in each category is appropriate, but the analysis goal will remain the same for now.
 
 ```{r}
-articles %>% 
+articles  
+  filter(Level == "low-adv") %>% 
   count(Use)
+  
+articles
+  inner_join(speechd, by = "Level")
 ```
 
 
 ```{r}
 # This code shows the overall frequency with each level indicated in the plot
 articles %>% 
-  ggplot(aes(Use, fill = Level))+
-  geom_bar(position = "dodge") +
-  scale_fill_manual(values = c("high-int" = "black", "low-int" = "darkgreen", "low-adv" = "darkblue"))
+  ggplot(aes(as_factor(Level), fill = Use))+
+  geom_bar(position = "fill")+
+  xlab("Level")
+  scale_fill_manual(values = c("correct" = "red", "incorrect-MS" = "limegreen", "incorrect-null" = "blue", "incorrect-PL" = "purple"))
 
 
-
+articles1
 # This code visualizes the frequency for each level with renamed variables for better visibility on the plot
 articles1 <- articles
 articles1$Use <- articles1$Use %>%  
@@ -587,7 +641,9 @@ articles1$Use <- articles1$Use %>%
 articles1 %>% 
   ggplot(aes(Use))+
   geom_bar(fill = "brown")+
-  facet_wrap(~Level)
+  facet_wrap(~as_factor(Level))
+
+articles
 
 ```
 ```{r}
